# ImageCompression

./: CMakeLists.txt  README.md  imageModel.cpp  imageModel.h  main.cpp  matrix.cpp  matrix.h  ractangleModel.cpp  rectangleModel.h
